--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build:
+    name: "Build Docker Image"
     env:
       RUNS_ON: "ubuntu-20.04"
     runs-on: "ubuntu-20.04"
@@ -20,11 +21,8 @@ jobs:
           docker run \
             --init \
             --rm \
-            "distcc-docker:${{ env.RUNS_ON }}"
+            "distcc-docker:${{ env.RUNS_ON }}" \
             --jobs $(nproc) \
             -- \
             bash -c \
-              "ps fauxw; " \
-              "/usr/bin/ls -alh .; " \
-              "/usr/bin/ls -alh /var/log; " \
-              "cat /var/log/*;"
+              "ps fauxw; /usr/bin/ls -alh .; /usr/bin/ls -alh /var/log; cat /var/log/*; exit;"
